--- a/HospitalManager.Client/Components/Pages/Home.razor
+++ b/HospitalManager.Client/Components/Pages/Home.razor
@@ -1,7 +1,36 @@
 ﻿@page "/"
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
+@inject IHttpClientFactory httpClientFactory
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+@code {
+    protected override async Task OnInitializedAsync()
+        {
+            var httpClient = httpClientFactory.CreateClient("APIClient");
+
+            try
+            {
+                var request = new HttpRequestMessage(HttpMethod.Get, "/api/");
+                var response = await httpClient.SendAsync(request, HttpCompletionOption.ResponseHeadersRead);
+
+                response.EnsureSuccessStatusCode();
+                var responseString = await response.Content.ReadAsStringAsync();
+
+                Console.WriteLine(responseString);
+            }
+            catch (HttpRequestException ex)
+            {
+                Console.WriteLine($"Request error: {ex.Message}");
+            }
+            catch (Exception ex)
+            {
+                Console.WriteLine($"Unexpected error: {ex.Message}");
+            }
+    }
+}
