--- a/HospitalManager.IDP/Pages/Account/Login/Index.cshtml
+++ b/HospitalManager.IDP/Pages/Account/Login/Index.cshtml
@@ -45,14 +45,17 @@
                                 </div>
                             }
                             
-                            <div class="form-group">
-                                <a
-                                    asp-page="/Account/Registration/Index"
-                                    asp-route-returnUrl="@Model.Input.ReturnUrl"
-                                    class="btn btn-secondary">
-                                    Sign Up
-                                </a>
-                            </div>
+                            @if (Model.Input.IsTokenAvailable)
+                            {
+                                <div class="form-group">
+                                    <a
+                                        asp-page="/Account/Registration/Index"
+                                        asp-route-returnUrl="@Model.Input.ReturnUrl"
+                                        class="btn btn-secondary">
+                                        Sign Up
+                                    </a>
+                                </div>
+                            }
                             <button class="btn btn-primary" name="Input.Button" value="login">Sign in</button>
                             <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
                         </form>
