--- a/HospitalManager.Client/Components/Layout/NavMenu.razor
+++ b/HospitalManager.Client/Components/Layout/NavMenu.razor
@@ -25,5 +25,15 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="patients">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Patients
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="invite">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Invite
+            </NavLink>
+        </div>
     </nav>
 </div>
