--- a/HospitalManager.Client/Components/Layout/MainLayout.razor
+++ b/HospitalManager.Client/Components/Layout/MainLayout.razor
@@ -16,6 +16,12 @@
     </main>
 </div>
 
+<footer class="fixed-footer bg-dark text-white py-3 mt-auto">
+    <div class="container text-center">
+        <p>&copy; 2024 Hospital Manager. All rights reserved.</p>
+    </div>
+</footer>
+
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
