--- a/HospitalManager.Client/Components/Layout/NavMenu.razor
+++ b/HospitalManager.Client/Components/Layout/NavMenu.razor
@@ -15,21 +15,28 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="doctors">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Doctors
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="examinations">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Examinations
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="skusanie">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Skusanie
+            <NavLink class="nav-link" href="recipes">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Recipes
             </NavLink>
-        </div
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="profil">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Profile
+            </NavLink>
+        </div>
+
     </nav>
 </div>
