--- a/HospitalManager.Client/Components/Pages/pacient/Reciepes.razor
+++ b/HospitalManager.Client/Components/Pages/pacient/Reciepes.razor
@@ -4,14 +4,14 @@
 
 
 
-<h1 class="text-primary fw-bold">Actual recipes</h1>
+<h1 class="text-primary fw-bold">Aktuálne recepty</h1>
 @* nepouzite a neexpirovane *@
 <RecipeBar MedicineName="xanax"></RecipeBar>
 <RecipeBar MedicineName="coaxil"></RecipeBar>
 <RecipeBar MedicineName="lexaurin"></RecipeBar>
 
 
-<h4 class="text-primary fw-bold"> in past</h4>
+<h4 class="text-primary fw-bold">Recepty v minulosti</h4>
 @* pouzite a (expirovane alebo neexpirovane) *@
 <RecipeBar MedicineName="stoptusin"></RecipeBar>
 <RecipeBar MedicineName="nurofen"></RecipeBar>
