--- a/HospitalManager.Client/Components/Pages/pacient/profil.razor
+++ b/HospitalManager.Client/Components/Pages/pacient/profil.razor
@@ -9,37 +9,37 @@
     </svg>
 
     <div class="row align-items-center mb-3 mt-4">
-        <p class="col-auto text-muted fs-5 fw-bold">Your contact detils</p>
+        <p class="col-auto text-muted fs-5 fw-bold">Vaše kontaknté údaje</p>
         <hr class="col"/>
     </div>
 
     <div class="ms-4">
-        <ProfileField Text="Given name(s)" Value="@Name"/>
+        <ProfileField Text="Meno" Value="@Name"/>
 
-        <ProfileField Text="Surname" Value="@Surname" />
+        <ProfileField Text="Priezvisko" Value="@Surname" />
 
-        <ProfileField Text="Phone number" Value="@Phone" />
+        <ProfileField Text="Telefón" Value="@Phone" />
 
         <ProfileField Text="E-mail" Value="@Mail" />
 
-        <ProfileField Text="Street" Value="@Street" />
+        <ProfileField Text="Ulica" Value="@Street" />
 
-        <ProfileField Text="City" Value="@City" />
+        <ProfileField Text="Mesto" Value="@City" />
 
-        <ProfileField Text="Post code (PSČ)" Value="@PostCode" />
+        <ProfileField Text="PSČ" Value="@PostCode" />
     </div>
 
 
     <div class="row align-items-center mb-3 mt-5">
-        <p class="col-auto text-muted fs-5 fw-bold">Health insurance company</p>
+        <p class="col-auto text-muted fs-5 fw-bold">Poisťovňa</p>
         <hr class="col" />
     </div>
 
     <div class="ms-4">
-        <ProfileField Text="Health insurance company"/>
+        <ProfileField Text="Zdravotná poisťovňa"/>
     </div>
 
-    <button type="button" class="btn btn-success w-25 m-4">Save</button>
+    <button type="button" class="btn btn-success w-25 m-4">Uložiť</button>
 </div>
 
 
