--- a/HospitalManager.Client/Components/App.razor
+++ b/HospitalManager.Client/Components/App.razor
@@ -5,12 +5,15 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="HospitalManager.Client.styles.css"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <HeadOutlet/>
 </head>
+
 
 <body>
 <Routes/>
