--- a/HospitalManager.Client/Components/Layout/Patient/RecipeBar.razor
+++ b/HospitalManager.Client/Components/Layout/Patient/RecipeBar.razor
@@ -1,6 +1,6 @@
 ﻿
 
-<div class="card m-3" style="width: 100%; border-radius: 8px;">
+<div class="card m-3" style="width: 100%; border-radius: 8px; background-color: #FFFAFA; border: 1px solid #007bff;">
     <div class="card-body">
         <div class="d-flex justify-content-between">
             <h5 class="card-title" style="font-weight: bold; color: #343a40;">@MedicineName</h5>
