--- a/HospitalManager.Client/Components/Layout/NavMenu.razor
+++ b/HospitalManager.Client/Components/Layout/NavMenu.razor
@@ -25,5 +25,11 @@
                 <span>Lieky</span>
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link d-flex align-items-center" href="profile">
+                <span class="bi bi-person fs-4 me-2" aria-hidden="true"></span>
+                <span>Profil</span>
+            </NavLink>
+        </div>
     </nav>
 </div>
