--- a/HospitalManager.Client/Components/Pages/Doctor/MedicineList.razor
+++ b/HospitalManager.Client/Components/Pages/Doctor/MedicineList.razor
@@ -13,8 +13,8 @@
         <table class="table table-bordered table-striped">
             <thead>
             <tr>
-                <th>sukl_kod</th>
-                <th>Nazov</th>
+                <th>Kód</th>
+                <th>Názov</th>
                 <th>Doplnok</th>
                 <th>Registračné číslo</th>
             </tr>
