--- a/HospitalManager.Client/Components/Pages/Doctor/PatientDetails.razor
+++ b/HospitalManager.Client/Components/Pages/Doctor/PatientDetails.razor
@@ -34,7 +34,7 @@
     </div>
 
     <div class="mt-4">
-        <h4>Recipe</h4>
+        <h4>Predpísané recepty</h4>
         <table class="table table-bordered">
             <thead>
             <tr>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="mt-4">
-        <h4>Examination</h4>
+        <h4>Prehliadky</h4>
         <table class="table table-bordered">
             <thead>
             <tr>
